# vastoria

./: .env.example  .env.production.example  .env.staging.example  .gitignore  CHANGELOG.md  INTEGRATION.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: release-windows.yml
apps/ai-backend/: .env.example  .gitignore  README.md  pyproject.toml
apps/ai-backend/deploy/: Dockerfile  docker-compose.yml  vastoria-ai.service
apps/ai-backend/tests/: test_api.py  test_context.py  test_modes.py
apps/ai-backend/vastoria_ai/: __init__.py  config.py  main.py
apps/ai-backend/vastoria_ai/db/: __init__.py  models.py  repository.py  session.py
apps/ai-backend/vastoria_ai/routers/: __init__.py  chat.py  context.py  health.py  models.py
apps/ai-backend/vastoria_ai/schemas/: __init__.py  chat.py  context.py  models.py  modes.py
apps/ai-backend/vastoria_ai/services/: __init__.py  chat.py  context.py  modes.py  ollama.py  stream_manager.py
apps/cloud-api/: .env.example  .gitignore  README.md  pyproject.toml
apps/cloud-api/deploy/: Dockerfile  docker-compose.yml
apps/cloud-api/deploy/nginx/: nginx.conf
apps/cloud-api/tests/: conftest.py  test_downloads.py  test_releases.py  test_sync.py  test_updates.py
apps/cloud-api/vastoria_cloud/: config.py  main.py
apps/cloud-api/vastoria_cloud/api/: deps.py
apps/cloud-api/vastoria_cloud/auth/: stub.py
apps/cloud-api/vastoria_cloud/data/: model_catalog.json  releases.json
apps/cloud-api/vastoria_cloud/db/: models.py  seed.py  session.py
apps/cloud-api/vastoria_cloud/routers/: downloads.py  health.py  models.py  public_files.py  releases.py  sync.py  updates.py
apps/cloud-api/vastoria_cloud/schemas/: downloads.py  models.py  releases.py  sync.py  updates.py
apps/cloud-api/vastoria_cloud/services/: artifact_storage.py  downloads.py  hashing.py  model_catalog.py  releases.py  storage.py  sync.py  updates.py
apps/ide/: .env.example  .gitignore  README.md  index.html  package.json  tsconfig.tsbuildinfo  vite.config.ts
apps/ide/src-tauri/: Cargo.toml  tauri.conf.json
apps/ide/src-tauri/.cargo/: config.toml
apps/ide/src-tauri/capabilities/: default.json
apps/ide/src-tauri/src/: commands.rs  lib.rs  main.rs  ollama.rs  terminal.rs
apps/website/: package.json
deploy/: .env.server  docker-compose.cloud.yml  docker-compose.stack.yml  start-public.sh
deploy/firewall/: README.md  ufw-vastoria.sh
deploy/proxy/: Caddyfile  Caddyfile.server  nginx-vastoria.conf
deploy/systemd/: vastoria-cloud-api.service  vastoria-website.service
deploy/website/: Dockerfile
tooling/validate/: publish-release.sh  (+1 more)
(+76 files in other folders)
