[package]
name = "vastoria-ide"
version = "0.1.0"
description = "Vastoria Desktop IDE"
authors = ["Vastoria"]
edition = "2021"

[package.metadata.tauri]
config = "tauri.conf.json"

[lib]
name = "vastoria_ide_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync", "time", "rt-multi-thread", "macros"] }
uuid = { version = "1", features = ["v4"] }
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
portable-pty = "0.8"
anyhow = "1"
